--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "multer": "^2.0.0"
+  "express": "^4.18.2",
+  "multer": "^2.0.0"
   }
+
 }
