--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-  "express": "^4.18.2",
-  "multer": "^2.0.0"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "multer": "^2.0.0"
   }
-
 }
